<resources>
    <string name="app_name">WotLK Saves</string>
    <string name="subcat_header_characters">Characters</string>
    <string name="subcat_header_contacts">Contacts</string>
    <string name="subcat_header_find">Find a character</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="string_add_new_realm">Add new realm</string>
    <string name="string_add_new_server">Add new server</string>
    <string name="string_add_server">Add a server</string>
    <string name="string_select_existing_server">Select existing server</string>
    <string name="string_go">Go</string>
    <string name="string_select_existing_account">Select existing account</string>
    <string name="string_add_new_account">Add new account</string>
    <string name="label_choose_a_realm">Choose a realm:</string>
    <string name="label_realm">Realm:</string>

    <string name="warning_existing_realm">This realm already exists!</string>
    <string name="warning_added_realm">Added</string>
    <string name="string_server">Server</string>
    <string name="string_hint_realm">e.g. Icecrown x7</string>
    <string name="string_nav_menu_characters">Characters</string>
    <string name="string_nav_menu_find_a_character">Find a character</string>
    <string name="string_nav_menu_contacts">Contacts</string>
    <string name="string_nav_menu_settings">Settings</string>
    <string name="string_nav_menu_share">Share</string>
    <string name="string_nav_menu_share_the_blacklist">Share the blacklist</string>
    <string name="string_nav_menu_share_the_whitelist">Share the whitelist</string>
    <string name="string_nav_menu_leave">Leave</string>
    <string name="string_nav_menu_choose_another_realm">Choose another realm…</string>
    <string name="string_nav_menu_exit">Exit</string>

    <string name="string_choose_action">Choose action…</string>
    <string name="string_places">Places</string>
    <string name="string_move_to_blacklist">Move to blacklist</string>
    <string name="string_move_to_whitelist">Move to whitelist</string>


    <string name="race_human">Human</string>
    <string name="race_dwarf">Dwarf</string>
    <string name="race_nightelf">Night Elf</string>
    <string name="race_gnome">Gnome</string>
    <string name="race_draenei">Draenei</string>
    <string name="race_orc">Orc</string>
    <string name="race_undead">Undead</string>
    <string name="race_tauren">Tauren</string>
    <string name="race_troll">Troll</string>
    <string name="race_bloodelf">Blood Elf</string>
    <string-array name="wow_races">
        <item>@string/race_human</item>
        <item>@string/race_dwarf</item>
        <item>@string/race_nightelf</item>
        <item>@string/race_gnome</item>
        <item>@string/race_draenei</item>
        <item>@string/race_orc</item>
        <item>@string/race_undead</item>
        <item>@string/race_tauren</item>
        <item>@string/race_troll</item>
        <item>@string/race_bloodelf</item>
    </string-array>

    <string name="class_mage">Mage</string>
    <string name="class_warlock">Warlock</string>
    <string name="class_priest">Priest</string>
    <string name="class_rogue">Rogue</string>
    <string name="class_druid">Druid</string>
    <string name="class_hunter">Hunter</string>
    <string name="class_shaman">Shaman</string>
    <string name="class_warrior">Warrior</string>
    <string name="class_paladin">Paladin</string>
    <string name="class_darkknight">Dark Knight</string>
    <string-array name="wow_classes">
        <item>@string/class_mage</item>
        <item>@string/class_warlock</item>
        <item>@string/class_priest</item>
        <item>@string/class_rogue</item>
        <item>@string/class_druid</item>
        <item>@string/class_hunter</item>
        <item>@string/class_shaman</item>
        <item>@string/class_warrior</item>
        <item>@string/class_paladin</item>
        <item>@string/class_darkknight</item>
    </string-array>

    <string name="spec_mage_1">Arcane %s</string>
    <string name="spec_mage_2">Fire %s</string>
    <string name="spec_mage_3">Frost %s</string>
    <string name="spec_warlock_1">Affliction %s</string>
    <string name="spec_warlock_2">Demonology %s</string>
    <string name="spec_warlock_3">Destruction %s</string>
    <string name="spec_priest_1">Discipline %s</string>
    <string name="spec_priest_2">Holy %s</string>
    <string name="spec_priest_3">Shadow %s</string>
    <string name="spec_rogue_1">Assassination %s</string>
    <string name="spec_rogue_2">Combat %s</string>
    <string name="spec_rogue_3">Sublety %s</string>
    <string name="spec_druid_1">Balance %s</string>
    <string name="spec_druid_2">Feral %s</string>
    <string name="spec_druid_3">Restoration %s</string>
    <string name="spec_shaman_1">Elements %s</string>
    <string name="spec_shaman_2">Enhance %s</string>
    <string name="spec_shaman_3">Restoration %s</string>
    <string name="spec_hunter_1">Beast Mastery %s</string>
    <string name="spec_hunter_2">Marksmanship %s</string>
    <string name="spec_hunter_3">Surviving %s</string>
    <string name="spec_darkknight_1">Blood %s</string>
    <string name="spec_darkknight_2">Frost %s</string>
    <string name="spec_darkknight_3">Unholy %s</string>
    <string name="spec_paladin_1">Holy %s</string>
    <string name="spec_paladin_2">Protection %s</string>
    <string name="spec_paladin_3">Retribution %s</string>
    <string name="spec_warrior_1">Arms %s</string>
    <string name="spec_warrior_2">Fury %s</string>
    <string name="spec_warrior_3">Protection %s</string>
    <string name="string_no_chars">You have no chars on this realm yet</string>
    <string name="label_add_nickname">Nickname:</string>
    <string name="label_add_race_class">Race and class:</string>
    <string name="label_add_level">Level: %d</string>
    <string name="label_add_specs">Specs:</string>
    <string name="string_add_character">Add character</string>
    <string name="label_create">Create</string>

    <string name="tab_text_1">Blacklist</string>
    <string name="tab_text_2">Whitelist</string>
    <string name="label_ellipsis">…</string>
    <string name="string_search">Search</string>
    <string name="string_sort">Sort</string>
    <string name="label_enter_nickname">Enter nickname:</string>
    <string name="label_enter_reason">Enter reason:</string>
    <string name="label_account">Account:</string>

    <string name="string_alliance">Alliance</string>
    <string name="string_horde">Horde</string>
    <string name="no_spec">No spec</string>
    <string name="string_moved_to_whitelist">Moved to whitelist</string>
    <string name="string_instance_naxx_10">Naxx 10</string>
    <string name="string_instance_naxx_25">Naxx 25</string>
    <string name="string_instance_os_10">OS 10</string>
    <string name="string_instance_os_25">OS 25</string>
    <string name="string_instance_ulduar_10">Ulduar 10</string>
    <string name="string_instance_ulduar_25">Ulduar 25</string>
    <string name="string_instance_onyxia_10">Onyxia 10</string>
    <string name="string_instance_onyxia_25">Onyxia 25</string>
    <string name="string_instance_va_10">VA 10</string>
    <string name="string_instance_va_25">VA 25</string>
    <string name="string_instance_toc_10">ToC 10</string>
    <string name="string_instance_togc_10">ToGC 10</string>
    <string name="string_instance_toc_25">ToC 25</string>
    <string name="string_instance_togc_25">ToGC 25</string>
    <string name="string_instance_icc_10">ICC 10</string>
    <string name="string_instance_icc_10h">ICC 10h</string>
    <string name="string_instance_icc_25">ICC 25</string>
    <string name="string_instance_icc_25h">ICC 25h</string>
    <string name="string_instance_rs_10h">RS 10h</string>
    <string name="string_instance_rs_10">RS 10</string>
    <string name="string_instance_rs_25">RS 25</string>
    <string name="string_instance_rs_25h">RS 25h</string>
    <string name="string_added">Added</string>
    <string name="string_moved_to_blacklist">Moved to blacklist</string>
</resources>