<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_characters"
            android:icon="@drawable/ic_person_24dp"
            android:title="@string/string_nav_menu_characters" />
        <item
            android:id="@+id/nav_find"
            android:icon="@drawable/ic_search_24dp"
            android:title="@string/string_nav_menu_find_a_character" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts_24dp"
            android:title="@string/string_nav_menu_contacts" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/string_nav_menu_settings" />
    </group>

    <item android:title="@string/string_nav_menu_share">
        <menu>
            <item
                android:id="@+id/nav_share_blacklist"
                android:icon="@drawable/ic_blacklist_24dp"
                android:title="@string/string_nav_menu_share_the_blacklist" />
            <item
                android:id="@+id/nav_share_whitelist"
                android:icon="@drawable/ic_whitelist_24dp"
                android:title="@string/string_nav_menu_share_the_whitelist" />
        </menu>
    </item>

    <item android:title="@string/string_nav_menu_leave">
        <menu>
            <item
                android:id="@+id/nav_choose_realm"
                android:icon="@android:drawable/stat_notify_sync_noanim"
                android:title="@string/string_nav_menu_choose_another_realm"/>
            <item
                android:id="@+id/nav_exit"
                android:icon="@android:drawable/ic_delete"
                android:title="@string/string_nav_menu_exit"/>
        </menu>
    </item>

</menu>
