<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_standart_margin">


        <LinearLayout
            android:id="@+id/naxx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_naxx10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_naxx_10" />

            <CheckBox
                android:id="@+id/check_naxx25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_naxx_25" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/os"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_os10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_os_10" />

            <CheckBox
                android:id="@+id/check_os25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_os_25" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/uldu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_ulduar10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_ulduar_10" />

            <CheckBox
                android:id="@+id/check_ulduar25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_ulduar_25" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ony"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_onyxia10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_onyxia_10" />

            <CheckBox
                android:id="@+id/check_onyxia25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_onyxia_25" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/va"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_va10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_va_10" />

            <CheckBox
                android:id="@+id/check_va25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_va_25" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/toc10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_toc10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_toc_10" />

            <CheckBox
                android:id="@+id/check_togc10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_togc_10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/toc25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_toc25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_toc_25" />

            <CheckBox
                android:id="@+id/check_togc25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_togc_25" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/icc10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_icc10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_icc_10" />

            <CheckBox
                android:id="@+id/check_icc10h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_icc_10h" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/icc25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_icc25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_icc_25" />

            <CheckBox
                android:id="@+id/check_icc25h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_icc_25h" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rs10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_rs10h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_rs_10h" />

            <CheckBox
                android:id="@+id/check_rs10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_rs_10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rs25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_rs25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_rs_25" />

            <CheckBox
                android:id="@+id/check_rs25h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_instance_rs_25h" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>