<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_standart_margin"
    android:orientation="vertical">


    <ToggleButton
        android:id="@+id/toggle_server_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edit_server"
        android:textOff="@string/string_select_existing_server"
        android:textOn="@string/string_add_new_server" />

    <TextView
        android:id="@+id/label_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_server"
        android:labelFor="@id/edit_server"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Spinner
        android:id="@+id/servers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="gone" />

    <TextView
        android:id="@+id/label_realm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_realm"
        android:labelFor="@id/edit_realm"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/edit_realm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/string_hint_realm"
        android:textColorHint="@color/colorHint"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        app:layout_constraintTop_toBottomOf="@id/edit_server"/>

</LinearLayout>