<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_standart_margin"
    android:orientation="vertical">


    <TextView
        android:id="@+id/label_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_enter_nickname"
        android:labelFor="@id/edit_server"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/edit_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/label_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_enter_reason"
        android:labelFor="@id/edit_realm"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/edit_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorHint"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_faction"
        style="@style/SwitchCompatStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_standart_margin"
        android:checked="false"
        android:text="@string/string_alliance"
        android:theme="@style/SwitchCompatTheme" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        app:layout_constraintTop_toBottomOf="@id/edit_reason"/>

</LinearLayout>